--- a/jeff_torch_env_ubuntu18/Dockerfile
+++ b/jeff_torch_env_ubuntu18/Dockerfile
@@ -1,11 +1,13 @@
-FROM nvidia/cuda:11.1-cudnn8-devel-ubuntu18.04
+FROM nvidia/cuda:10.2-devel-ubuntu18.04
 
 RUN apt update -y \
  && apt install -y python3-pip tmux sudo vim \
  && update-alternatives --install /usr/bin/python python /usr/bin/python3.6 10 \
  && python -m pip --no-cache-dir install -U pip \
- && python -m pip --no-cache-dir install torch==1.8.1+cu111 torchvision==0.9.1+cu111 -f https://download.pytorch.org/whl/torch_stable.html \
- && python -m pip --no-cache-dir install matplotlib numpy opencv-python Pillow PyYAML scipy tqdm tensorboard seaborn pandas thop pycocotools \
+ && python -m pip --no-cache-dir install torch torchvision \
+ && python -m pip --no-cache-dir install matplotlib numpy opencv-python-headless \
+    Pillow PyYAML scipy tqdm tensorboard seaborn pandas thop pycocotools scikit-learn \
+    torchsummary \
  && apt-get clean -y
 
 RUN useradd -m -s /bin/bash -u 1000 -U jeff \
